[gd_scene load_steps=3 format=3 uid="uid://dsqijubrlkha2"]

[ext_resource type="Script" path="res://scenes/ui/options_menu/options_menu.gd" id="1_78h02"]
[ext_resource type="PackedScene" uid="uid://dwnwju7rvg8qi" path="res://scenes/ui/audio_button/audio_button.tscn" id="2_12ian"]

[node name="OptionsMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_78h02")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="OptionsContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MasterSliderContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer/MasterSliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer/MasterSliderContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1.0
step = 0.0
value = 1.0

[node name="SFXSliderContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer/SFXSliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer/SFXSliderContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1.0
step = 0.0
value = 1.0

[node name="MusicSliderContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer/MusicSliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer/MusicSliderContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1.0
step = 0.0
value = 1.0

[node name="WindowModeButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer" instance=ExtResource("2_12ian")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Windowed"

[node name="BackButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_12ian")]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Back"
